# asksh

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  asksh.sh  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/asksh/: __init__.py  __main__.py  chat.py  cli.py  client.py  config.py  history.py  ollama.py  query.py  render.py  sysprompt.py
