[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asksh"
version = "0.2.4"
description = "AI-powered CLI tool that converts natural language into Linux shell commands."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Sergi Soler i Segura" },
]
keywords = ["ollama", "shell", "cli", "llm", "posix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "prompt-toolkit>=3.0.43,<4",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/srgsol/asksh"
Repository = "https://github.com/srgsol/asksh"
Issues = "https://github.com/srgsol/asksh/issues"

[project.scripts]
asksh = "asksh.cli:main"


[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "pre-commit>=4",
]
